--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flappybird-landingpage",
   "version": "0.0.0",
-  "description": "flappybird clone",
+  "description": "Flappy Bird",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,20 @@
   },
   "homepage": "https://github.com/shawnstallings/flappybird-landingpage#readme",
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "browserify": "^11.0.1",
+    "gulp": "^3.9.0",
+    "gulp-bower": "0.0.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.3.0",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
