--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.3.0",
+    "imagemin-pngquant": "^4.2.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "vinyl-buffer": "^1.0.0",
